<resources>
    <string name="app_name">Calculator</string>
    <string name="clr">CLR</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="Float">.</string>
    <string name="mines">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">÷</string>
    <string name="multiple">×</string>
    <string name="textviewInput">TextView</string>
    <string name="c">C</string>
    <string name="sqrt">√</string>
    <string name="cbrt">3√</string>
    <string name="x2">x²</string>
    <string name="X_Y">x^y</string>
    <string name="X3">x^3</string>
    <string name="factorial">x!</string>
    <string name="p">π</string>
    <string name="absX">|x|</string>
</resources>